# satanais

./: .ghci  .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  default.nix  hope.cabal  hope.nix  satanais.cabal  satanais.nix  shell.nix  stack.yaml
app/: Main.hs
nix/: load.sh  run.sh
src/: Hope.hs  Satanais.hs
src/Hope/: AST.hs  Parser.hs  Pretty.hs
src/Satanais/: AST.hs  Eval.hs  Parser.hs
test/files/: test1.stn  test2.stn  test3.stn  test4.stn  test5.stn
