name:           hope
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/hope#readme>
homepage:       https://github.com/appositum/hope#readme
bug-reports:    https://github.com/appositum/hope/issues
author:         Author name here
maintainer:     appositum@protonmail.com
copyright:      2019 Eddie
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/hope

library
  exposed-modules:
      Hope
      Hope.AST
      Hope.Parser
      Hope.Pretty
  other-modules:
      Paths_hope
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , megaparsec >= 7
  default-language: Haskell2010

executable hope-exe
  main-is: Main.hs
  other-modules:
      Paths_hope
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hope
    , megaparsec >= 7
  default-language: Haskell2010

test-suite hope-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hope
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hope
  default-language: Haskell2010
