name:           satanais
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/satanais#readme>
homepage:       https://github.com/appositum/satanais#readme
bug-reports:    https://github.com/appositum/satanais/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      Eddie
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version: 1.12
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/appositum/satanais

library
  exposed-modules:
      Satanais
      Satanais.AST
      Satanais.Eval
      Satanais.Parser
  other-modules:
      Paths_satanais
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , scientific
  default-language: Haskell2010

executable satanais-exe
  main-is: Main.hs
  other-modules:
      Paths_satanais
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , satanais
    , megaparsec
    , parser-combinators
    , scientific
  default-language: Haskell2010

test-suite satanais-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_satanais
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , satanais
  default-language: Haskell2010
